--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-scripts": "4.0.3",
     "sequelize": "^6.13.0",
     "sequelize-cli": "^6.3.0",
+    "styled-components": "^5.3.3",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2",
     "ws": "^8.4.0"
