--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
     "ws": "^8.4.0"
   },
   "scripts": {
-    "start": "npm-run-all -p starts:**",
+    "start": "npm-run-all -p starts:****",
     "starts:client": "react-scripts start",
     "starts:server": "nodemon ./server/httpServer.js",
+    "starts:server2": "nodemon ./server2/httpServer.js",
+    "starts:server3": "nodemon ./server3httpServer.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
