--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "starts:client": "react-scripts start",
     "starts:server": "nodemon ./server/httpServer.js",
     "starts:server2": "nodemon ./server2/httpServer.js",
-    "starts:server3": "nodemon ./server3httpServer.js",
+    "starts:server3": "nodemon ./server3/httpServer.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
